fix: Update error message color for better visibility

--- a/content/style.css
+++ b/content/style.css
@@ -142,7 +142,7 @@ textarea {
 }
 
 form .error {
-  color: #c12626;
+  color: #f3ccec;
   margin-bottom: 16px;
 }
 
